--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,31 @@
-Flask==3.0.3
+annotated-types==0.7.0
+anyio==4.9.0
+blinker==1.9.0
+certifi==2025.1.31
+click==8.1.8
+distro==1.9.0
+Flask==3.1.0
+fuzzywuzzy==0.18.0
 gunicorn==23.0.0
+h11==0.14.0
+httpcore==1.0.8
+httpx==0.28.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jiter==0.9.0
+Levenshtein==0.27.1
+MarkupSafe==3.0.2
+openai==1.72.0
+packaging==25.0
+pydantic==2.11.3
+pydantic_core==2.33.1
+python-dotenv==1.1.0
+python-Levenshtein==0.27.1
+RapidFuzz==3.13.0
+sniffio==1.3.1
+tqdm==4.67.1
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+Werkzeug==3.1.3
+wheel @ file:///opt/homebrew/Cellar/python%403.13/3.13.2/libexec/wheel-0.45.1-py3-none-any.whl#sha256=b9235939e2096903717cb6bfc132267f8a7e46deb2ec3ef9c5e234ea301795d0
